mockers_derive/tests/compile-fail/unsafe_trait.rs
use mockers_derive::mocked;

#[mocked]
unsafe trait A {}

fn main() {}
