mockers_derive/tests/compile-fail/unsafe_trait.stderr
error: Unsafe traits are not supported yet.

 --> $DIR/unsafe_trait.rs:4:1
  |
4 | unsafe trait A {}
  | ^^^^^^

error: could not compile `mockers_derive-tests`.
